task02/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task02-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task02
  template:
    metadata:
      labels:
        app: task02
    spec:
      containers:
        - name: task02
          image: grandumm/microservice-architecture:latest
          ports:
            - name: http
              containerPort: 8000
