task02/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task02-service
spec:
  selector:
    app: task01
  ports:
    - protocol: TCP
      port: 9000
      targetPort: http
  type: NodePort
